Bug 126402 - FILEOPEN Line endings are not imported properly
Summary: FILEOPEN Line endings are not imported properly
Status: RESOLVED FIXED
Alias: None
Product: Document Liberation Project
Classification: Unclassified
Component: libvisio (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: inReleaseNotes:25.2
Keywords: filter:visio
Depends on:
Blocks:
 
Reported: 2019-07-15 13:09 UTC by Bartosz
Modified: 2024-12-09 07:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Visio electric diagram which do not displays properly (157.50 KB, application/vnd.visio)
2019-07-15 13:09 UTC, Bartosz
Details
Line Format Testing VSD file (72.00 KB, application/vnd.visio)
2019-07-15 13:20 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2019-07-15 13:09:53 UTC
Created attachment 152781 [details]
Visio electric diagram which do not displays properly

File ending are not displayed properly.
Steps to reproduce bug:

1. Open attached file

Current result:
- Line Joints are shifted, and not directly on crossing the lines
- Some endings are not displayed correclty. For example empty circle are displayed as arrow
- after editing the the end style, it is marked as "None"

Expected result:
- Line Joints are placed directly on crossing the lines
- All endings are not displayed correclty. For example empty circle.
- after editing the the end style, it is marked as "Circle", or "Arrow"
Comment 1 Bartosz 2019-07-15 13:20:30 UTC
Created attachment 152782 [details]
Line Format Testing VSD file
Comment 2 Bartosz 2019-07-15 13:20:43 UTC
Review:
https://gerrit.libreoffice.org/#/c/75635/