tdf#126402 Fix line formating issue

With this commit, I have implemented more Visio arrow styles
and I have added support importing Center Line Ending.

As a result many import issues of Visio diagrams was resolved.

Change-Id: I5284e3e53b9d5174ab49e841c66be58e06060760
Reviewed-on: https://gerrit.libreoffice.org/75635
Tested-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>